--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -196,7 +196,7 @@
 										<div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-xl dropdown-menu-anim-up">
 											<form>
 
-												{% "partials/_extras/dropdown/cart.html" %}
+												{% include "partials/_extras/dropdown/cart.html" %}
 											</form>
 										</div>
 
