--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,16 @@ License: You must have a valid license purchased only from themeforest(the above
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
 
 		<!--end::Fonts-->
+		<!--begin::highcharts.com-->
+		<script src="https://code.highcharts.com/maps/highmaps.js"></script>
+		<script src="https://code.highcharts.com/maps/modules/data.js"></script>
+		<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+		<script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
+		<script src="https://code.highcharts.com/mapdata/countries/uz/uz-all.js"></script>
+		
+
+
+		<!--end::highcharts.com-->
 
 		<!--begin::Page Vendors Styles(used by this page)-->
 		<link href="/assets/plugins/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css" />
