--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,17 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts-->
 		<!--begin::highcharts.com-->
 		<script src="https://code.highcharts.com/maps/highmaps.js"></script>
-		<script src="https://code.highcharts.com/maps/modules/data.js"></script>
+		<script src="https://code.highcharts.com/stock/modules/data.js"></script>
 		<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
 		<script src="https://code.highcharts.com/mapdata/custom/world.js"></script>
 		<script src="https://code.highcharts.com/mapdata/countries/uz/uz-all.js"></script>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.6/proj4.js"></script>
+		<script src="https://code.highcharts.com/mapdata/custom/europe.js"></script>
+		<script src="https://code.highcharts.com/modules/marker-clusters.js"></script>
+		<script src="https://code.highcharts.com/modules/coloraxis.js"></script>
+
+		<script src="/assets/js/highm.js"></script>
 		
 
 
@@ -62,8 +69,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	<body id="kt_body" class="page-loading-enabled page-loading header-static header-mobile-fixed page-loading">
 
 		
-		{% include "partials/_header-mobile.html" %}
-        
 		{% include "partials/_header-mobile.html" %}
 		<div class="d-flex flex-column flex-root">
 
