--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 
-<script src="/assets/js/highm.js"></script>
+
 {% block content %}
-<div id="container">
-    
-    
-</div>
+<div id="container"></div>
+<div id="container2"></div>
 <h1> Hello World </h1>
 
 <link rel="stylesheet" href="/assets/css/somecss.css">
