created def to import data

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,15 @@
 
 
 {% block content %}
-<div id="container"></div>
+<!-- <div id="container"></div> -->
 <div id="container2"></div>
-<h1> Hello World </h1>
 
 <link rel="stylesheet" href="/assets/css/somecss.css">
 <script>
     
-
+// $(document).ready(function(){
+    
+// })
 document.addEventListener('DOMContentLoaded', function () {
   var data = [
     ['uz-fa', 0],
