changed tabs to links

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -12,7 +12,7 @@
 								<div class="d-none d-lg-flex align-items-center mr-3">
 
 									<!--begin::Logo-->
-									<a href="index.html" class="mr-20">
+									<a href="/" class="mr-20">
 										<img alt="Logo" src="assets/media/logos/logo-letter-9.png" class="max-h-35px" />
 									</a>
 
@@ -23,28 +23,28 @@
 
 										<!--begin::Item-->
 										<li class="nav-item">
-											<a href="#" class="nav-link py-4 px-6 active" data-toggle="tab" data-target="#kt_header_tab_1" role="tab">Home</a>
+											<a href="/" class="nav-link py-4 px-6" role="tab">Home</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="#" class="nav-link py-4 px-6" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Reports</a>
+											<a href="/reports" class="nav-link py-4 px-6" role="tab">Reports</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="#" class="nav-link py-4 px-6" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Orders</a>
+											<a href="/orders" class="nav-link py-4 px-6" role="tab">Orders</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="#" class="nav-link py-4 px-6" data-toggle="tab" data-target="#kt_header_tab_2" role="tab">Help Ceter</a>
+											<a href="/help" class="nav-link py-4 px-6" role="tab">Help Ceter</a>
 										</li>
 
 										<!--end::Item-->
