--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -23,28 +23,28 @@
 
 										<!--begin::Item-->
 										<li class="nav-item">
-											<a href="/" class="nav-link py-4 px-6" role="tab">Home</a>
+											<a href="/" class="nav-link {% if page=='home' %} active  {% endif %} py-4 px-6" role="tab">Home</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="/reports" class="nav-link py-4 px-6" role="tab">Reports</a>
+											<a href="/reports" class="nav-link {% if page=='reports' %} active  {% endif %} py-4 px-6" role="tab">Reports</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="/orders" class="nav-link py-4 px-6" role="tab">Orders</a>
+											<a href="/orders" class="nav-link {% if page=='orders' %} active  {% endif %} py-4 px-6" role="tab">Orders</a>
 										</li>
 
 										<!--end::Item-->
 
 										<!--begin::Item-->
 										<li class="nav-item mr-3">
-											<a href="/help" class="nav-link py-4 px-6" role="tab">Help Ceter</a>
+											<a href="/help" class="nav-link {% if page=='help' %} active  {% endif %} py-4 px-6" role="tab">Help Ceter</a>
 										</li>
 
 										<!--end::Item-->
